fixing styles on mobile

--- a/src/routes/Home.module.scss
+++ b/src/routes/Home.module.scss
@@ -6,16 +6,20 @@
 
   .customLineChart {
     flex: 1;
-    width: 100%;
-    margin-right: 1rem;
+    margin-bottom: 1rem;
   }
 
   .customComponent {
-    flex-basis: 40%;
+    flex-basis: 30%;
   }
 
   @media (min-width: 1200px) {
     flex-direction: row;
+
+    .customLineChart {
+      margin-right: 1rem;
+      margin-bottom: 0;
+    }
 
     .customLineChart {
       flex: 1;
